[package]
name = "hello_world"
version = "0.1.0"
authors = ["Thomas Duboucher <thomas.duboucher@thalesgroup.com>"]
description = ""
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "0.2"
default-features = true

[dependencies.wasm-macro]
path = "./wasm-macro"

[profile.release]
panic = "abort"
